--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
-  "name": "my-site",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "name": "my-site",
+    "version": "0.1.0",
+    "private": true,
+
+    "dependencies": {
+        "@fortawesome/react-fontawesome": "^0.1.4",
+        "axios": "^0.18.0",
+        "react": "^16.7.0",
+        "react-bootstrap": "^0.32.4",
+        "react-dom": "^16.7.0",
+        "react-responsive": "^6.0.1",
+        "react-responsive-navbar": "^1.0.11",
+        "react-router-dom": "^4.3.1",
+        "react-scripts": "2.1.3"
+    },
+    "scripts": {
+
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ],
+    "devDependencies": {
+        "gh-pages": "^2.0.1"
+    }
 }
