--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "my-site",
     "version": "0.1.0",
     "private": true,
-
+    "homepage": "https://perkov22.github.io/my-repo/",
     "dependencies": {
         "@fortawesome/react-fontawesome": "^0.1.4",
         "axios": "^0.18.0",
@@ -15,7 +15,8 @@
         "react-scripts": "2.1.3"
     },
     "scripts": {
-
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
